# synthetic_persona

synthetic_persona/: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  run_all.sh
synthetic_persona/config/: experiment_config.py  rsi_sdbs_config.py
synthetic_persona/data/: preprocess_bigfive.py  preprocess_privacy.py  preprocess_wvs.py
synthetic_persona/data/bigfive_gt/: Argentina.csv  Australia.csv  India.csv  distributions.json  factor_stats.json
synthetic_persona/data/privacy_gt/: South Africa.csv  United Kingdom.csv  construct_mapping.json  distributions.json
synthetic_persona/data/wvs_gt/: Argentina.csv  Australia.csv  Germany.csv  India.csv  Kenya.csv  United States.csv  distributions.json
synthetic_persona/engine/: llm_client.py  run_rsi_survey.py  run_survey.py  vllm_server.py
synthetic_persona/metrics/: analysis.py  step_a_gt_based.py  step_b_compute_all.py  step_b_structural.py  step_c_compute_all.py  step_c_gt_free.py  step_d_rsi_sdbs.py
synthetic_persona/prompts/: __init__.py  cultural_prompting.py  deep_persona.py  opencharacter_persona.py
synthetic_persona/reports_for_human/: POST_EXPERIMENT_PRD.md  metrics_analysis_report.md  progress_report.md  project_explanation.md
synthetic_persona/results/bigfive/Argentina/: cultural.csv  cultural_para.csv  deep_persona.csv  (+3 more)
synthetic_persona/results/metrics/: analysis_results.json  step_a_results.json  step_b_results.json  step_c_results.json  step_d_results.json
synthetic_persona/scripts/: 01_start_vllm.sh  02_run_domain_b.sh  03_run_domain_a.sh  04_compute_metrics.sh  05_analyze.sh
(+78 files in other folders)
