[project]
name = "synthetic-persona"
version = "0.1.0"
description = "GT-free defect indicators (SCS, VCR, ICE) for LLM synthetic persona survey data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "litellm>=1.82.6",
    "numpy>=2.4.3",
    "openai>=1.0.0",
    "openpyxl>=3.1.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "torch>=2.11.0",
    "tqdm>=4.66.0",
    "transformers>=5.3.0",
    "vllm>=0.1.2",
]
